--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ background-color: rgba(0, 0, 0, 0.57);
 <div class="ui doubling stackable centered grid container">
                 <div class="middle aligned center aligned column">
                     
-                    <h1 class="beautiful ui header"><span class="content">ametrine@tuta.io</span>
+                    <h1 class="beautiful ui inverted header"><span class="content">ametrine@tuta.io</span>
                     </h1>
                 </div>
         </div>
